# MultiAxesControl

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DEBUG.md  FLASHING.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md
application/: CMakeLists.txt  motor_control.c  motor_control.h
builds/build_blinky/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
config/: FreeRTOSConfig.h  register_config.h
examples/: CMakeLists.txt
examples/blinky/: CMakeLists.txt  README.md
examples/blinky/src/: main.c
firmware/: CMakeLists.txt  README.md
firmware/src/: main.c
gui_app/: README.md  motor_control_app.py
hal/: CMakeLists.txt  hal_interface.h
os/: CMakeLists.txt  task_manager.c  task_manager.h
